# api/openapi.yaml
@@ -468,7 +468,13 @@ components:
         completed_at:
           type: string
           format: date-time
-      required: [id, task_id, name]
+        created_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
+      required: [id, task_id, name, created_at, updated_at]
     tag:
       type: object
       properties:
@@ -476,7 +482,13 @@ components:
           type: string
         name:
           type: string
-      required: [id, name]
+        created_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
+      required: [id, name, created_at, updated_at]
     tags:
       type: object
       properties:
